@@ -1,6 +1,10 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+14-Jan-2003	Joachim Ansorg <joachim@ansorgs.de>
+	Added strip filter for the red letter words so users can turn it off
+	Worked a bit on locales.d/de.conf to include some abbrevs
+
 10-Jan-2003	Terry Biggs <tbiggs@infinet.com>
 	Added new osisstrongs and osismorph support to gbfhtml*.
 
